# forest-fire

./: .gitattributes  README.md  pyproject.toml
notebooks/: eda.ipynb  model_training.ipynb  model_validation.ipynb  pytorch_train.ipynb
outputs/: pytorch_mlp_preprocess.joblib  pytorch_mlp_state.pt
outputs/figures/: metrics.json
outputs/models/: pytorch_mlp_preprocess.joblib  pytorch_mlp_state.pt  sklearn_models.joblib
