[project]
name = "sem-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.7.31",
    "elapid>=1.0.4",
    "geopandas>=1.1.3",
    "ipykernel>=7.3.0",
    "jenkspy>=0.4.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "osmium>=4.3.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "rasterio>=1.5.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "statsmodels>=0.14.6",
    "torch>=2.12.1",
    "torchview>=0.2.7",
    "torchviz>=0.0.3",
    "tqdm>=4.68.2",
    "xgboost>=3.2.0",
]
